--- a/example.env
+++ b/example.env
@@ -12,9 +12,8 @@ MARKET_HOST=0.0.0.0
 # ===============================
 # Internal service URL
 # ===============================
-MARKET_URL=http://market:4000
+MARKET_URL=http://worker:4000
 
 # ===============================
 # Performance tuning
 # ===============================
-MARKET_TICK_INTERVAL=1000
