--- a/Dockerfile.next
+++ b/Dockerfile.next
@@ -20,4 +20,4 @@ COPY --from=build /app/public ./public
 COPY --from=build /app/package.json ./package.json
 
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD ["npm", "run", "start:nextjs"]
