--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   nextjs:
     container_name: SMA-nextjs
@@ -8,6 +6,7 @@ services:
       dockerfile: Dockerfile.next
     ports:
       - "4040:3000" # host:container
+    restart: unless-stopped
     env_file:
       - .env
     depends_on:
@@ -18,7 +17,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.worker
-    ports:
-      - "4000:4000"
+    restart: unless-stopped
+    expose:
+      - "4000"
     env_file:
       - .env
