--- a/example.env
+++ b/example.env
@@ -13,3 +13,9 @@ MARKET_HOST=0.0.0.0
 # Internal service URL
 # ===============================
 MARKET_URL=http://worker:4000
+
+# ===============================
+# NextAuth.js
+# ===============================
+NEXTAUTH_SECRET=super-secret-key # use openssl to generate a random 32 character key
+NEXTAUTH_URL=https://yourdomain.com
