define login in .env

--- a/example.env
+++ b/example.env
@@ -17,5 +17,7 @@ MARKET_URL=http://worker:4000
 # ===============================
 # NextAuth.js
 # ===============================
-NEXTAUTH_SECRET=super-secret-key # use openssl to generate a random 32 character key
+NEXTAUTH_SECRET=super-secret-key # use openssl (or similar) to generate a random 32 character key
 NEXTAUTH_URL=https://yourdomain.com
+LOGIN_NAME=admin
+LOGIN_PASSWORD=admin
