add authentication to protected pages (#8)
* installed nextauth

* naive auth implementation

* define login in .env

* fix callback search param

* pretty login/logout page

* updated readme and version number

--- a/example.env
+++ b/example.env
@@ -13,3 +13,11 @@ MARKET_HOST=0.0.0.0
 # Internal service URL
 # ===============================
 MARKET_URL=http://worker:4000
+
+# ===============================
+# NextAuth.js
+# ===============================
+NEXTAUTH_SECRET=super-secret-key # use openssl (or similar) to generate a random 32 character key
+NEXTAUTH_URL=https://yourdomain.com
+LOGIN_NAME=admin
+LOGIN_PASSWORD=admin
