--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile.next
     ports:
-      - "4040:3000" # host:container
+      - 4040:3000 # host:container
     restart: unless-stopped
     depends_on:
       - worker
